--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-client_id=YOUR_CLIENT_ID
-client_secret=YOUR_CLIENT_SECRET
-username=YOUR_MINIMAX_USERNAME
-password=YOUR_MINIMAX_PASSWORD
-MINIMAX_AUTH_URL=https://moj.minimax.hr/HR/API/api/token
-MINIMAX_API_URL=https://moj.minimax.hr/HR/API
+client_id=SFortis_Mm_AP1
+client_secret=ZN062YBEZWtTQ2rl
+username=marijan.dezic
+password=Javisekumu1!
+MINIMAX_AUTH_URL=https://moj.minimax.hr/HR/AUT/oauth20/token
+MINIMAX_API_URL=https://moj.minimax.hr/HR/api
 CONTRACT_TEMPLATE_PATH=server/templates/Ugovor_template.docx
 PORT=10000
