--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
-    "client:dev": "npm run dev --prefix client",
-    "client:build": "npm run build --prefix client",
-    "client:preview": "npm run preview --prefix client"
+    "build": "npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,7 +14,7 @@
     "node-fetch": "^3.3.2",
     "pizzip": "^3.1.7"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+  "engines": {
+    "node": "20.x"
   }
 }
